--- a/index.html
+++ b/index.html
@@ -30,34 +30,24 @@
           <!-- We append our chart here. -->
         </div>
       </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12  col-md-9">
-      <div class="article">
-        <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
+    <div class="row">
+      <div class="col-xs-12  col-md-9">
+        <div class="article">
+          <h2>Correlation of Risk Factors to Poverty Rate, Age and Median Household Income</h2>
+          <p>All data for the visualization above sourced from: https://factfinder.census.gov/faces/nav/jsf/pages/searchresults.xhtml</p>
+
+          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
           quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
           ultricies mi vitae est. Mauris placerat eleifend leo.</p>
 
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
+          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
           quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
           ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-          quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-          ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+        </div>
       </div>
-    </div>
   </div>
 </div>
 
-
-  <!-- Footer-->
-  <div id="footer">
-    <h4>Data Source:</h4>
-    <p>All data for the visualization above sourced from: https://factfinder.census.gov/faces/nav/jsf/pages/searchresults.xhtml</p>
-  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
