Finalizing html info

--- a/index.html
+++ b/index.html
@@ -33,16 +33,11 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlation of Risk Factors to Poverty Rate, Age and Median Household Income</h2>
+          <h2>Correlation of Risk Factors to Poverty Rate, Age and Median Household</h2>
           <p>All data for the visualization above sourced from: https://factfinder.census.gov/faces/nav/jsf/pages/searchresults.xhtml</p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-          quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-          ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-          quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-          ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>From the census data, we have created a visualization to help explicate the prevalence of different risk indicators in different states based on either age or income level. 
+          Please indicate the variable that you wish to view the data by, and click on the individual states to get the granular numerical data on each point.</p>
         </div>
       </div>
   </div>
