--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="col-xs-12  col-md-9">
         <div class="article">
           <h2>Correlation of Risk Factors to Poverty Rate, Age and Median Household</h2>
-          <p>All data for the visualization above sourced from: https://factfinder.census.gov/faces/nav/jsf/pages/searchresults.xhtml</p>
+          <p>All data for the visualization above sourced from: https://data.census.gov/cedsci/table?q=2014%20ACS%201-year%20estimate&tid=ACSDP1Y2014.DP05&hidePreview=false</p>
 
           <p>From the census data, we have created a visualization to help explicate the prevalence of different risk indicators in different states based on either age or income level. 
           Please indicate the variable that you wish to view the data by, and click on the individual states to get the granular numerical data on each point.</p>
